# deepcool-digital

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs
src/monitor/: cpu.rs  mod.rs  winring0.rs
src/monitor/gpu/: amd.rs  intel.rs  nvidia.rs
src/monitor/gpu/pci/: mod.rs  pci_ids.rs
