[package]
name = "deepcool-digital-linux"
version = "0.10.4"
edition = "2021"

[dependencies]
libloading = "0.9.0"
hidapi = "2.6.4"
cpu-monitor = "0.1.1"
colored = "3.1.1"

[target.'cfg(windows)'.dependencies]
wmi = "0.14"
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
    "Win32_System_Com",
    "Win32_System_Services",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
] }

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
